--- a/benchmarks/Cargo.toml
+++ b/benchmarks/Cargo.toml
@@ -14,7 +14,7 @@ tokio = { version = "=0.2.22", features = ["full"] }
 futures = { version = "0.3", features = ["compat"] }	
 bytes = "0.5"
 # paho-mqtt = { git = "https://github.com/eclipse/paho.mqtt.rust" }
-paho-mqtt = "0.7"
+# paho-mqtt = "0.7"
 async-channel = "1.4"
 pretty_env_logger = "0.4"
 prost = "0.6"
