--- a/rumqttd/config/rumqttd.conf
+++ b/rumqttd/config/rumqttd.conf
@@ -38,3 +38,6 @@ next_connection_delay_ms = 10
     cert_path = "tlsfiles/server.cert.pem"
     key_path = "tlsfiles/server.key.pem"
     ca_path = "tlsfiles/ca-chain.cert.pem"
+
+[console]
+port = 3030
