--- a/rumqttd/config/rumqttd1.conf
+++ b/rumqttd/config/rumqttd1.conf
@@ -1,5 +1,5 @@
 # Broker id. Used to identify local node of the replication mesh
-id = 0
+id = 1
 
 # A commitlog read will pull full segment. Make sure that a segment isn't
 # too big as async tcp writes readiness of one connection might affect tail
@@ -13,7 +13,7 @@ max_connections = 10001
 
 # Configuration of server and connections that it accepts
 [servers.1]
-port = 1883
+port = 1884
 next_connection_delay_ms = 1
     [servers.1.connections]
     connection_timeout_ms = 100
@@ -25,7 +25,7 @@ next_connection_delay_ms = 1
 
 # Configuration of server and connections that it accepts
 [servers.2]
-port = 8883
+port = 8884
 next_connection_delay_ms = 10
     # Tls connections. ca_path enables client authentication
     [servers.2.connections]
@@ -51,9 +51,9 @@ next_connection_delay_ms = 10
     [cluster.1]
     host = "localhost"
     port = 1801
-    [cluster.2]
-    host = "localhost"
-    port = 1802
+    # [cluster.2]
+    # host = "localhost"
+    # port = 1802
 
 # Io configuration for replication
 [replicator]
@@ -64,3 +64,5 @@ max_payload_size = 2048
 max_inflight_count = 500
 max_inflight_size = 1024
 
+[console]
+port = 3031
