--- a/rumqttd/config/rumqttd0.conf
+++ b/rumqttd/config/rumqttd0.conf
@@ -51,9 +51,9 @@ next_connection_delay_ms = 10
     [cluster.1]
     host = "localhost"
     port = 1801
-    [cluster.2]
-    host = "localhost"
-    port = 1802
+    # [cluster.2]
+    # host = "localhost"
+    # port = 1802
 
 # Io configuration for replication
 [replicator]
@@ -63,4 +63,7 @@ throttle_delay_ms = 0
 max_payload_size = 2048
 max_inflight_count = 500
 max_inflight_size = 1024
+
+[console]
+port = 3030
 
