--- a/rumqttd/Cargo.toml
+++ b/rumqttd/Cargo.toml
@@ -21,6 +21,7 @@ path = "src/bin.rs"
 rumqttlog = { path = "../rumqttlog", version = "0.3"}
 mqtt4bytes = { path = "../mqtt4bytes", version = "0.4" }
 tokio = { version = "0.3", features = ["full"] }
+tokio-rustls = "0.21"
 tokio-compat-02 = "0.1"
 serde = { version = "1", features = ["derive"] }
 log = "0.4"
