--- a/rumqttlog/Cargo.toml
+++ b/rumqttlog/Cargo.toml
@@ -13,6 +13,7 @@ memmap = "0.7"
 bytes = "0.6"
 mqtt4bytes = { path = "../mqtt4bytes", version = "0.4" }
 serde = { version = "1", features = ["derive", "rc"] }
+segments = "0.1"
 thiserror = "1"
 log = "0.4"
 fnv = "1"
