--- a/benchmarks/Cargo.toml
+++ b/benchmarks/Cargo.toml
@@ -10,12 +10,12 @@ edition = "2018"
 argh = "0.1"
 rumqttc = { path = "../rumqttc" }
 rumqttlog = { path = "../rumqttlog" }
-tokio = { version = "=0.2.22", features = ["full"] }
+tokio = { version = "1.0", features = ["full"] }
 futures = { version = "0.3", features = ["compat"] }	
-bytes = "0.5"
+bytes = "1.0"
 # paho-mqtt = { git = "https://github.com/eclipse/paho.mqtt.rust" }
 # paho-mqtt = "0.7"
-async-channel = "1.4"
+async-channel = "1.5"
 pretty_env_logger = "0.4"
 prost = "0.6"
 pprof = { version = "0.3", features = ["flamegraph", "protobuf"] }
