--- a/rumqttc/Cargo.toml
+++ b/rumqttc/Cargo.toml
@@ -12,12 +12,13 @@ categories = ["network-programming"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tokio = { version = "0.3.2", features = ["full"] }
-bytes = "0.6"
+tokio = { version = "1.0", features = ["full"] }
+tokio-stream = "0.1"
+bytes = "1.0"
 webpki = "0.21"
-tokio-rustls = "0.20"
-async-tungstenite = { version = "0.10.0", default-features = false, features = ["tokio-rustls"] }
-ws_stream_tungstenite = { version = "0.4.0-beta.2", default-features = false, features = ["tokio_io"] }
+tokio-rustls = "0.22"
+async-tungstenite = { version = "0.11.0", default-features = false, features = ["tokio-rustls"] }
+ws_stream_tungstenite = { version = "0.4.0", default-features = false, features = ["tokio_io"] }
 mqtt4bytes = { path = "../mqtt4bytes", version = "0.4" }
 pollster = "0.2"
 async-channel = "1.5"
@@ -32,5 +33,5 @@ crossbeam-channel = "0.5"
 serde = {version = "1", features = ["derive"]}
 envy = "0.4"
 jsonwebtoken = "7"
-tokio = { version = "0.3.2", features = ["full", "macros"] }
+tokio = { version = "1.0", features = ["full", "macros"] }
 matches = "0.1.8"
