--- a/rumqttc/Cargo.toml
+++ b/rumqttc/Cargo.toml
@@ -35,3 +35,5 @@ envy = "0.4"
 jsonwebtoken = "7"
 tokio = { version = "1.0", features = ["full", "macros"] }
 matches = "0.1.8"
+rustls = "0.19"
+rustls-native-certs = "0.5.0"
