--- a/benchmarks/Cargo.toml
+++ b/benchmarks/Cargo.toml
@@ -18,6 +18,7 @@ futures = { version = "0.3", features = ["compat"] }
 bytes = "1.0"
 async-channel = "1.4"
 pretty_env_logger = "0.4"
+itoa = "0.4"
 prost = "0.6"
 pprof = { version = "0.3", features = ["flamegraph", "protobuf"] }
 # paho-mqtt = { git = "https://github.com/eclipse/paho.mqtt.rust" }
@@ -52,5 +53,13 @@ path = "router/routernxn.rs"
 # path = "pahoasync.rs"
 
 [[bin]]
-name = "mqttbytesparser"
-path = "parsers/mqttbytes.rs"
+name = "v4parser"
+path = "parsers/v4.rs"
+
+[[bin]]
+name = "v5parser"
+path = "parsers/v5.rs"
+
+[[bin]]
+name = "natsparser"
+path = "parsers/nats.rs"
