Replace hard coded 0.0.0.0 bind with configuration option (#262)
The address that the broker and console binds is hardcoded to
the v4 any address 0.0.0.0. In order to operate the broker on
a dedicated address or a v6 ip this needs to be added to the
configuration. Replace the lonely `port` setting in the
configuration with a `std::net::SocketAddr`.

--- a/rumqttd/config/rumqttd.conf
+++ b/rumqttd/config/rumqttd.conf
@@ -13,7 +13,7 @@ max_connections = 10001
 
 # Configuration of server and connections that it accepts
 [servers.1]
-port = 1883
+listen = "0.0.0.0:1883"
 next_connection_delay_ms = 1
     [servers.1.connections]
     connection_timeout_ms = 100
@@ -25,7 +25,7 @@ next_connection_delay_ms = 1
 
 # Configuration of server and connections that it accepts
 [servers.2]
-port = 8883
+listen = "0.0.0.0:8883"
 cert_path = "tlsfiles/server.cert.pem"
 key_path = "tlsfiles/server.key.pem"
 ca_path = "tlsfiles/ca-chain.cert.pem"
@@ -40,4 +40,4 @@ next_connection_delay_ms = 10
     max_inflight_size = 1024
 
 [console]
-port = 3030
+listen = "0.0.0.0:3030"
