--- a/rumqttd/config/rumqttd2.conf
+++ b/rumqttd/config/rumqttd2.conf
@@ -13,7 +13,7 @@ max_connections = 10001
 
 # Configuration of server and connections that it accepts
 [servers.1]
-port = 1885
+listen = "0.0.0.0:1885"
 next_connection_delay_ms = 1
     [servers.1.connections]
     connection_timeout_ms = 100
@@ -25,7 +25,7 @@ next_connection_delay_ms = 1
 
 # Configuration of server and connections that it accepts
 [servers.2]
-port = 8885
+listen = "0.0.0.0:1885"
 next_connection_delay_ms = 10
     # Tls connections. ca_path enables client authentication
     [servers.2.connections]
@@ -39,21 +39,18 @@ next_connection_delay_ms = 10
     key_path = "tlsfiles/server.key.pem"
     ca_path = "tlsfiles/ca-chain.cert.pem"
 
-# Cluster configuration. Remote host and port to connect to.
+# Cluster configuration. Remote address to connect to.
 # Mesh is created based on ids.
 # 0 connects to 1 & 2 as client
 # 1 connects to 2 as client and waits for 0 as a server
 # 2 waits for 0 and 1 as a server
 [cluster]
     [cluster.0]
-    host = "localhost"
-    port = 1800
+    address = "localhost:1800"
     [cluster.1]
-    host = "localhost"
-    port = 1801
+    address = "localhost:1801"
     # [cluster.2]
-    # host = "localhost"
-    # port = 1802
+    # address = "localhost:1802"
 
 # Io configuration for replication
 [replicator]
@@ -65,4 +62,4 @@ max_inflight_count = 500
 max_inflight_size = 1024
 
 [console]
-port = 3032
+listen = "0.0.0.0:3032"
