--- a/rumqttd/config/rumqttd0.conf
+++ b/rumqttd/config/rumqttd0.conf
@@ -13,7 +13,7 @@ max_connections = 10001
 
 # Configuration of server and connections that it accepts
 [servers.1]
-port = 1883
+listen = "0.0.0.0:1883"
 next_connection_delay_ms = 1
     [servers.1.connections]
     connection_timeout_ms = 100
@@ -25,7 +25,7 @@ next_connection_delay_ms = 1
 
 # Configuration of server and connections that it accepts
 [servers.2]
-port = 8883
+listen = "0.0.0.0:1883"
 next_connection_delay_ms = 10
     # Tls connections. ca_path enables client authentication
     [servers.2.connections]
@@ -46,14 +46,11 @@ next_connection_delay_ms = 10
 # 2 waits for 0 and 1 as a server
 [cluster]
     [cluster.0]
-    host = "localhost"
-    port = 1800
+    address = "localhost:1800"
     [cluster.1]
-    host = "localhost"
-    port = 1801
+    address = "localhost:1801"
     # [cluster.2]
-    # host = "localhost"
-    # port = 1802
+    # address = "localhost:1802"
 
 # Io configuration for replication
 [replicator]
@@ -65,5 +62,5 @@ max_inflight_count = 500
 max_inflight_size = 1024
 
 [console]
-port = 3030
+listen = "0.0.0.0:3030"
 
