--- a/rumqttd/config/rumqttd.conf
+++ b/rumqttd/config/rumqttd.conf
@@ -16,7 +16,7 @@ max_connections = 10001
 listen = "0.0.0.0:1883"
 next_connection_delay_ms = 1
     [servers.1.connections]
-    connection_timeout_ms = 100
+    connection_timeout_ms = 5000
     max_client_id_len = 256
     throttle_delay_ms = 0
     max_payload_size = 5120
@@ -28,11 +28,11 @@ next_connection_delay_ms = 1
 listen = "0.0.0.0:8883"
 cert_path = "tlsfiles/server.cert.pem"
 key_path = "tlsfiles/server.key.pem"
-ca_path = "tlsfiles/ca-chain.cert.pem"
+ca_path = "tlsfiles/ca.cert.pem"
 next_connection_delay_ms = 10
     # Tls connections. ca_path enables client authentication
     [servers.2.connections]
-    connection_timeout_ms = 100
+    connection_timeout_ms = 5000
     max_client_id_len = 256
     throttle_delay_ms = 0
     max_payload_size = 5120
