--- a/rumqttd/config/rumqttd.conf
+++ b/rumqttd/config/rumqttd.conf
@@ -26,11 +26,13 @@ next_connection_delay_ms = 1
 # Configuration of server and connections that it accepts
 [servers.2]
 listen = "0.0.0.0:8883"
-cert_path = "tlsfiles/server.cert.pem"
-key_path = "tlsfiles/server.key.pem"
-ca_path = "tlsfiles/ca.cert.pem"
 next_connection_delay_ms = 10
-    # Tls connections. ca_path enables client authentication
+    # Cert config
+    [servers.2.cert]
+    cert_path = "tlsfiles/server.cert.pem"
+    key_path = "tlsfiles/server.key.pem"
+    ca_path = "tlsfiles/ca.cert.pem"
+    # Connection parameters
     [servers.2.connections]
     connection_timeout_ms = 5000
     max_client_id_len = 256
