--- a/rumqttd/config/rumqttd0.conf
+++ b/rumqttd/config/rumqttd0.conf
@@ -27,7 +27,12 @@ next_connection_delay_ms = 1
 [servers.2]
 listen = "0.0.0.0:1883"
 next_connection_delay_ms = 10
-    # Tls connections. ca_path enables client authentication
+    # Handling of Certs
+    [servers.2.cert]
+    cert_path = "tlsfiles/server.cert.pem"
+    key_path = "tlsfiles/server.key.pem"
+    ca_path = "tlsfiles/ca-chain.cert.pem"
+    # Connection parameters
     [servers.2.connections]
     connection_timeout_ms = 100
     max_client_id_len = 256
@@ -35,9 +40,7 @@ next_connection_delay_ms = 10
     max_payload_size = 2048
     max_inflight_count = 100
     max_inflight_size = 1024
-    cert_path = "tlsfiles/server.cert.pem"
-    key_path = "tlsfiles/server.key.pem"
-    ca_path = "tlsfiles/ca-chain.cert.pem"
+
 
 # Cluster configuration. Remote host and port to connect to.
 # Mesh is created based on ids.
