--- a/rumqttd/config/rumqttd1.conf
+++ b/rumqttd/config/rumqttd1.conf
@@ -27,7 +27,7 @@ next_connection_delay_ms = 1
 [servers.2]
 listen = "0.0.0.0:1884"
 next_connection_delay_ms = 10
-    # Tls connections. ca_path enables client authentication
+    # Connection parameters
     [servers.2.connections]
     connection_timeout_ms = 100
     max_client_id_len = 256
@@ -35,6 +35,8 @@ next_connection_delay_ms = 10
     max_payload_size = 2048
     max_inflight_count = 100
     max_inflight_size = 1024
+    # Certs for connection
+    [servers.2.certs]
     cert_path = "tlsfiles/server.cert.pem"
     key_path = "tlsfiles/server.key.pem"
     ca_path = "tlsfiles/ca-chain.cert.pem"
