--- a/rumqttc/Cargo.toml
+++ b/rumqttc/Cargo.toml
@@ -32,7 +32,7 @@ http = "^0.2"
 
 [dev-dependencies]
 pretty_env_logger = "0.4"
-color-backtrace = "0.4"
+# color-backtrace = "0.4"
 crossbeam-channel = "0.5"
 serde = {version = "1", features = ["derive"]}
 envy = "0.4"
