--- a/rumqttc/Cargo.toml
+++ b/rumqttc/Cargo.toml
@@ -17,7 +17,7 @@ rustdoc-args = ["--cfg", "docsrs"]
 websocket = ["async-tungstenite", "ws_stream_tungstenite"]
 
 [dependencies]
-tokio = { version = "1.0", features = ["full"] }
+tokio = { version = "1.0", features = ["net", "time"] }
 bytes = "1.0"
 webpki = "0.21"
 tokio-rustls = "0.22"
