--- a/rumqttmesh/Cargo.toml
+++ b/rumqttmesh/Cargo.toml
@@ -3,6 +3,7 @@ name = "rumqttmesh"
 version = "0.1.0"
 authors = ["tekjar <raviteja@bytebeam.io>"]
 edition = "2018"
+repository = "https://github.com/bytebeamio/rumqtt/"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
