TryFrom<Url> impl for MqttOptions (#320)
Signed-off-by: Jean Mertz <git@jeanmertz.com>

--- a/rumqttc/Cargo.toml
+++ b/rumqttc/Cargo.toml
@@ -29,6 +29,7 @@ async-channel = "1.5"
 log = "0.4"
 thiserror = "1.0.21"
 http = "^0.2"
+url = { version = "2.2", default-features = false, optional = true }
 
 [dev-dependencies]
 pretty_env_logger = "0.4"
