--- a/rumqttc/Cargo.toml
+++ b/rumqttc/Cargo.toml
@@ -43,3 +43,4 @@ tokio = { version = "1.0", features = ["full", "macros"] }
 matches = "0.1.8"
 rustls = "0.20.2"
 rustls-native-certs = "0.6.1"
+pretty_assertions = "1.1.0"
