--- a/rumqttmesh/Cargo.toml
+++ b/rumqttmesh/Cargo.toml
@@ -10,4 +10,4 @@ repository = "https://github.com/bytebeamio/rumqtt/"
 [dependencies]
 tokio = { version = "1", features = ["full"] }
 bytes = "1"
-rumqttlog = "0.1"
+rumqttlog = { path = "../rumqttlog" }
