--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,7 +2,7 @@ on:
   release:
     types: [published]
 
-name: release
+name: Publish to crates.io
 
 steps:
     - uses: actions/checkout@v2
@@ -11,5 +11,12 @@ steps:
           toolchain: stable
           override: true
     - uses: katyo/publish-crates@v1
+      name: Publish rumqttc
       with:
+          path: './rumqttc' 
+          registry-token: ${{ secrets.CARGO_REGISTRY_TOKEN }}
+    - uses: katyo/publish-crates@v1
+      name: Publish rumqttd
+      with:
+          path: './rumqttd' 
           registry-token: ${{ secrets.CARGO_REGISTRY_TOKEN }}
