--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,19 +4,23 @@ on:
 
 name: Publish to crates.io
 
-steps:
-    - uses: actions/checkout@v2
-    - uses: actions-rs/toolchain@v1
-      with:
+jobs:
+  publish:
+    name: Publish crates
+    runs-on: ubuntu-18.04
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
+        with:
           toolchain: stable
           override: true
-    - uses: katyo/publish-crates@v1
-      name: Publish rumqttc
-      with:
+      - uses: katyo/publish-crates@v1
+        name: Publish rumqttc
+        with:
           path: './rumqttc' 
           registry-token: ${{ secrets.CARGO_REGISTRY_TOKEN }}
-    - uses: katyo/publish-crates@v1
-      name: Publish rumqttd
-      with:
+      - uses: katyo/publish-crates@v1
+        name: Publish rumqttd
+        with:
           path: './rumqttd' 
           registry-token: ${{ secrets.CARGO_REGISTRY_TOKEN }}
