--- a/rumqttc/Cargo.toml
+++ b/rumqttc/Cargo.toml
@@ -14,13 +14,15 @@ all-features = true
 rustdoc-args = ["--cfg", "docsrs"]
 
 [features]
-websocket = ["async-tungstenite", "ws_stream_tungstenite"]
+default = ["use-rustls"]
+websocket = ["async-tungstenite", "ws_stream_tungstenite", "use-rustls"]
+use-rustls = ["tokio-rustls"]
 
 [dependencies]
 tokio = { version = "1.0", features = ["rt", "macros", "io-util", "net", "time"] }
 bytes = "1.0"
 webpki = "0.22.0"
-tokio-rustls = "0.23.2"
+tokio-rustls = { version = "0.23.2", optional = true }
 rustls-pemfile = "0.3.0"
 async-tungstenite = { version = "0.16.1", default-features = false, features = ["tokio-rustls-native-certs"], optional = true }
 ws_stream_tungstenite = { version = "0.7.0", default-features = false, features = ["tokio_io"], optional = true }
