--- a/.github/workflows/features.yml
+++ b/.github/workflows/features.yml
@@ -34,11 +34,11 @@ jobs:
         uses: actions-rs/cargo@v1
         env:
           RUSTFLAGS: "-D warnings"
-        # NOTE: benchmarks are limited to compiling on non windows systems only
-        if: ${{ matrix.os != 'windows-latest' }}
+        # NOTE: benchmarks are limited to compiling only on non windows systems, without any features enabled. 
+        if: ${{ matrix.os != 'windows-latest' && matrix.features == '--no-default-features' }}
         with:
           command: clippy
-          args: --verbose --all-targets ${{ matrix.features }} -p benchmarks
+          args: --verbose --all-targets -p benchmarks
       
       - name: Check rumqttc and rumqttd
         uses: actions-rs/cargo@v1
