--- a/rumqttc/Cargo.toml
+++ b/rumqttc/Cargo.toml
@@ -28,7 +28,7 @@ pollster = "0.2"
 rustls-pemfile = { version = "0.3", optional = true }
 thiserror = "1"
 tokio = { version = "1", features = ["rt", "macros", "io-util", "net", "time"] }
-tokio-rustls = { version = "=0.23.3", optional = true }
+tokio-rustls = { version = "0.23", optional = true }
 rustls-native-certs = { version = "0.6", optional = true }
 url = { version = "2", default-features = false, optional = true }
 ws_stream_tungstenite = { version = "0.7", default-features = false, features = ["tokio_io"], optional = true }
