--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,7 +7,7 @@ name: Publish to crates.io
 jobs:
   publish:
     name: Publish crates
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
@@ -17,10 +17,10 @@ jobs:
       - uses: katyo/publish-crates@v1
         name: Publish rumqttc
         with:
-          path: './rumqttc' 
+          path: './rumqttc'
           registry-token: ${{ secrets.CARGO_REGISTRY_TOKEN }}
       - uses: katyo/publish-crates@v1
         name: Publish rumqttd
         with:
-          path: './rumqttd' 
+          path: './rumqttd'
           registry-token: ${{ secrets.CARGO_REGISTRY_TOKEN }}
