config: Change default segment size to 100MB (#484)

--- a/rumqttd/demo.toml
+++ b/rumqttd/demo.toml
@@ -6,7 +6,7 @@ id = 0
 [router]
 id = 0
 instant_ack = true
-max_segment_size = 10240
+max_segment_size = 104857600
 max_segment_count = 10
 max_read_len = 10240
 max_connections = 10001
