fix: remove unused and feature gate websocket dependencies (#490)
* fix: remove reqwest dependency

* fix: remove `ws_stream_tungstenite` as dependency

* update cargo lock file

* feature gate optional util dependencies

--- a/rumqttd/Cargo.toml
+++ b/rumqttd/Cargo.toml
@@ -18,27 +18,25 @@ flume = "0.10.9"
 slab = "0.4.3"
 log = "0.4.14"
 thiserror = "1.0.24"
-tokio-util = { version = "0.7", features = ["codec"] }
+tokio-util = { version = "0.7", features = ["codec"], optional = true }
 tokio-rustls =  { version = "0.23.0", optional = true }
 tokio-native-tls = { version = "0.3", optional = true }
 rustls-pemfile = { version = "0.3.0", optional = true }
 tokio-tungstenite = { version = "0.15.0", optional = true }
-ws_stream_tungstenite = { version = "0.8", optional = true }
 websocket-codec = { version = "0.5.1", optional = true }
 rouille = "3.1.1"
 # x509-parser = {version= "0.9.2", optional = true}
-futures-util = "0.3.16"
+futures-util = { version = "0.3.16", optional = true}
 parking_lot = "0.11.2"
-reqwest = { version = "0.11", features = ["json"], default-features = false }
 config = "0.13"
 simplelog = "0.12.0"
 structopt = "0.3.26"
 
 [features]
 default = ["use-rustls"]
-use-rustls = ["tokio-rustls", "rustls-pemfile", "reqwest/rustls-tls"] #, "x509-parser"]
-use-native-tls = ["tokio-native-tls", "reqwest/native-tls"] #, "x509-parser"]
-websockets = ["tokio-tungstenite", "ws_stream_tungstenite", "websocket-codec"]
+use-rustls = ["tokio-rustls", "rustls-pemfile"] #, "x509-parser"]
+use-native-tls = ["tokio-native-tls"] #, "x509-parser"]
+websockets = ["tokio-tungstenite", "websocket-codec", "tokio-util", "futures-util"]
 
 [dev-dependencies]
 pretty_env_logger = "0.4.0"
