--- a/rumqttd/Cargo.toml
+++ b/rumqttd/Cargo.toml
@@ -16,7 +16,6 @@ serde_json = "1.0.66"
 bytes = { version = "1", features = ["serde"] }
 flume = "0.10.9"
 slab = "0.4.3"
-log = "0.4.14"
 thiserror = "1.0.24"
 tokio-util = { version = "0.7", features = ["codec"], optional = true }
 tokio-rustls =  { version = "0.23.0", optional = true }
@@ -29,8 +28,9 @@ rouille = "3.1.1"
 futures-util = { version = "0.3.16", optional = true}
 parking_lot = "0.11.2"
 config = "0.13"
-simplelog = "0.12.0"
 structopt = "0.3.26"
+tracing = { version="0.1", features=["log"] }
+tracing-subscriber = { version="0.3.16", features=["env-filter"] }
 
 [features]
 default = ["use-rustls"]
