--- a/rumqttd/Cargo.toml
+++ b/rumqttd/Cargo.toml
@@ -24,7 +24,7 @@ rustls-pemfile = { version = "0.3.0", optional = true }
 tokio-tungstenite = { version = "0.15.0", optional = true }
 websocket-codec = { version = "0.5.1", optional = true }
 rouille = "3.1.1"
-# x509-parser = {version= "0.9.2", optional = true}
+x509-parser = {version= "0.9.2", optional = true}
 futures-util = { version = "0.3.16", optional = true}
 parking_lot = "0.11.2"
 config = "0.13"
@@ -34,9 +34,10 @@ tracing-subscriber = { version="0.3.16", features=["env-filter"] }
 
 [features]
 default = ["use-rustls"]
-use-rustls = ["tokio-rustls", "rustls-pemfile"] #, "x509-parser"]
-use-native-tls = ["tokio-native-tls"] #, "x509-parser"]
+use-rustls = ["tokio-rustls", "rustls-pemfile", "x509-parser"]
+use-native-tls = ["tokio-native-tls" , "x509-parser"]
 websockets = ["tokio-tungstenite", "websocket-codec", "tokio-util", "futures-util"]
+validate-tenant-prefix = []
 
 [dev-dependencies]
 pretty_env_logger = "0.4.0"
