Stress test the router (#511)
* Add send method to local link to publish any packet and add stress example

* Simplify stress example

* Use env to filter traces

* Some comments to explain consumption in local link

* Multiple consumers and minor clean up

* Fix some clippy warnings

--- a/rumqttd/Cargo.toml
+++ b/rumqttd/Cargo.toml
@@ -40,6 +40,7 @@ websockets = ["tokio-tungstenite", "websocket-codec", "tokio-util", "futures-uti
 validate-tenant-prefix = []
 
 [dev-dependencies]
+tokio = { version = "1.4.0", features = ["rt", "time", "net", "io-util", "macros", "sync"]}
 pretty_env_logger = "0.4.0"
 config = "0.13"
 pretty_assertions = "1.3.0"
