feat(metrics): Expose a prometheus scraping endpoint when configured (#522)
* update use of the variable

* feat(metrics): Expose a prometheus scrape endpoint when configured in config file

* update port number in demo and rename field name

--- a/rumqttd/demo.toml
+++ b/rumqttd/demo.toml
@@ -55,6 +55,10 @@ next_connection_delay_ms = 1
     max_inflight_count = 500
     max_inflight_size = 1024
 
+[prometheus]
+port = 9042
+interval = 1
+
 [ws]
 
 [console]
