--- a/rumqttd/Cargo.toml
+++ b/rumqttd/Cargo.toml
@@ -31,6 +31,8 @@ config = "0.13"
 structopt = "0.3.26"
 tracing = { version="0.1", features=["log"] }
 tracing-subscriber = { version="0.3.16", features=["env-filter"] }
+metrics = "0.20.1"
+metrics-exporter-prometheus = "0.11.0"
 
 [features]
 default = ["use-rustls"]
