Use ca path in correct arg position (#529)

--- a/rumqttd/demo.toml
+++ b/rumqttd/demo.toml
@@ -26,22 +26,22 @@ next_connection_delay_ms = 1
     dynamic_filters = true
 
 # Example configuration for a TLS enabled server
-# [v4.2]
-# name = "v4-2"
-# listen = "0.0.0.0:8883"
-# next_connection_delay_ms = 10
-#     # tls config for rustls
-#     [v4.2.tls]
-#     certpath = "./localhost.cert.pem"
-#     keypath = "./localhost.key.pem"
-#     capath = "./ca.cert.pem"
-#     # settings for all the connections on this server
-#     [v4.2.connections]
-#     connection_timeout_ms = 60000
-#     throttle_delay_ms = 0
-#     max_payload_size = 20480
-#     max_inflight_count = 100
-#     max_inflight_size = 1024
+[v4.2]
+name = "v4-2"
+listen = "0.0.0.0:8883"
+next_connection_delay_ms = 10
+    # tls config for rustls
+    [v4.2.tls]
+    capath = "/etc/tls/ca.cert.pem"
+    certpath = "/etc/tls/server.cert.pem"
+    keypath = "/etc/tls/server.key.pem"
+    # settings for all the connections on this server
+    [v4.2.connections]
+    connection_timeout_ms = 60000
+    throttle_delay_ms = 0
+    max_payload_size = 20480
+    max_inflight_count = 100
+    max_inflight_size = 1024
 
 [v5.1]
 name = "v5-1"
