--- a/rumqttd/rumqttd.toml
+++ b/rumqttd/rumqttd.toml
@@ -11,6 +11,26 @@ max_segment_count = 10
 max_read_len = 10240
 max_connections = 10010
 
+# [bridge]
+# name = "bridge-1"
+# addr = "localhost:1883"
+# qos = 0
+# sub_path = "#"
+# reconnection_delay = 5
+# ping_delay = 5
+# timeout_delay = 5
+#     [bridge.connections]
+#     connection_timeout_ms = 60000
+#     max_client_id_len = 256
+#     throttle_delay_ms = 0
+#     max_payload_size = 20480
+#     max_inflight_count = 500
+#     max_inflight_size = 1024
+#     dynamic_filters = true
+#     [bridge.transport.tls]
+#     ca = "ca.cert.pem"
+#     client_auth = { certs = "test-1.cert.pem", key = "test-1.key.pem" }
+
 # Configuration of server and connections that it accepts
 [v4.1]
 name = "v4-1"
@@ -29,7 +49,6 @@ next_connection_delay_ms = 1
  #      user1 = "p@ssw0rd"
  #      user2 = "password"
 
-# Example configuration for a TLS enabled server
 [v4.2]
 name = "v4-2"
 listen = "0.0.0.0:8883"
