--- a/rumqttd/Cargo.toml
+++ b/rumqttd/Cargo.toml
@@ -23,7 +23,6 @@ tokio-native-tls = { version = "0.3", optional = true }
 rustls-pemfile = { version = "1", optional = true }
 tokio-tungstenite = { version = "0.15.0", optional = true }
 websocket-codec = { version = "0.5.1", optional = true }
-rouille = "3.1.1"
 x509-parser = {version= "0.9.2", optional = true}
 futures-util = { version = "0.3.16", optional = true}
 parking_lot = "0.11.2"
@@ -33,6 +32,7 @@ tracing-subscriber = { version="0.3.16", features=["env-filter"] }
 metrics = "0.20.1"
 metrics-exporter-prometheus = "0.11.0"
 clap = { version = "4.1.4", features = ["derive"] }
+axum = "0.6.4"
 
 [features]
 default = ["use-rustls"]
