--- a/rumqttc/Cargo.toml
+++ b/rumqttc/Cargo.toml
@@ -18,6 +18,7 @@ default = ["use-rustls"]
 use-rustls = ["dep:tokio-rustls", "dep:rustls-pemfile", "dep:rustls-native-certs"]
 use-native-tls = ["dep:tokio-native-tls", "dep:native-tls"]
 websocket = ["dep:async-tungstenite", "dep:ws_stream_tungstenite", "dep:http"]
+proxy = ["dep:async-http-proxy"]
 
 [dependencies]
 futures = "0.3"
@@ -41,6 +42,8 @@ tokio-native-tls = { version = "0.3.0", optional = true }
 native-tls = { version = "0.2.8", optional = true }
 # url
 url = { version = "2", default-features = false, optional = true }
+# proxy
+async-http-proxy = { version = "1.2.5", features = ["runtime-tokio", "basic-auth"], optional = true }
 
 [dev-dependencies]
 color-backtrace = "0.4"
