Replace heavy futures dep (#645)

--- a/rumqttc/Cargo.toml
+++ b/rumqttc/Cargo.toml
@@ -21,7 +21,7 @@ websocket = ["dep:async-tungstenite", "dep:ws_stream_tungstenite", "dep:http"]
 proxy = ["dep:async-http-proxy"]
 
 [dependencies]
-futures = "0.3"
+futures-util = { version = "0.3", default_features = false, features = ["std"] }
 tokio = { version = "1.0", features = ["rt", "macros", "io-util", "net", "time"] }
 bytes = "1.0"
 log = "0.4"
