feat(rumqttd): Support for websocket connections (#633)
---------

Co-authored-by: Henil Dedania <dedaniahenil@gmail.com>

--- a/rumqttd/rumqttd.toml
+++ b/rumqttd/rumqttd.toml
@@ -82,7 +82,33 @@ next_connection_delay_ms = 1
 listen = "127.0.0.1:9042"
 interval = 1
 
-[ws]
+[ws.1]
+name = "ws-1"
+listen = "0.0.0.0:8083"
+next_connection_delay_ms = 1
+    [ws.1.connections]
+    connection_timeout_ms = 60000
+    max_client_id_len = 256
+    throttle_delay_ms = 0
+    max_payload_size = 20480
+    max_inflight_count = 500
+    max_inflight_size = 1024
+
+# [ws.2]
+# name = "ws-2"
+# listen = "0.0.0.0:8081"
+# next_connection_delay_ms = 1
+#     [ws.2.tls]
+#     capath = "/etc/tls/ca.cert.pem"
+#     certpath = "/etc/tls/server.cert.pem"
+#     keypath = "/etc/tls/server.key.pem"
+#     [ws.2.connections]
+#     connection_timeout_ms = 60000
+#     max_client_id_len = 256
+#     throttle_delay_ms = 0
+#     max_payload_size = 20480
+#     max_inflight_count = 500
+#     max_inflight_size = 1024
 
 [console]
 listen = "0.0.0.0:3030"
