--- a/rumqttd/Cargo.toml
+++ b/rumqttd/Cargo.toml
@@ -22,8 +22,8 @@ tokio-rustls = { version = "0.24", optional = true }
 rustls-webpki = { version = "0.100.1", optional = true }
 tokio-native-tls = { version = "0.3", optional = true }
 rustls-pemfile = { version = "1", optional = true }
-tokio-tungstenite = { version = "0.15.0", optional = true }
-websocket-codec = { version = "0.5.1", optional = true }
+async-tungstenite = { version = "0.22.2", default-features = false, features = ["tokio-runtime"], optional = true }
+ws_stream_tungstenite = { version = "0.10.0", default-features = false, features = ["tokio_io"], optional = true }
 x509-parser = {version= "0.9.2", optional = true}
 futures-util = { version = "0.3.16", optional = true}
 parking_lot = "0.11.2"
@@ -37,9 +37,10 @@ axum = "0.6.4"
 
 [features]
 default = ["use-rustls"]
-use-rustls = ["dep:tokio-rustls", "dep:rustls-webpki", "dep:rustls-pemfile", "dep:x509-parser"]
-use-native-tls = ["dep:tokio-native-tls", "dep:x509-parser"]
-websockets = ["dep:tokio-tungstenite", "dep:websocket-codec", "dep:tokio-util", "dep:futures-util"]
+use-rustls = ["dep:tokio-rustls", "dep:rustls-webpki", "dep:rustls-pemfile", "dep:x509-parser", "async-tungstenite?/tokio-rustls-native-certs"]
+use-native-tls = ["dep:tokio-native-tls", "dep:x509-parser", "async-tungstenite?/tokio-native-tls"]
+websocket = ["dep:async-tungstenite", "dep:tokio-util", "dep:futures-util", "dep:ws_stream_tungstenite"]
+websockets = ["websocket"]
 validate-tenant-prefix = []
 allow-duplicate-clientid = []
 
